Expose jar expense category query api
